Fix section 2 alignment

--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ a {
 .section2-image-text-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 10px;
 }
 
